--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -3,7 +3,10 @@ run-name: Build a full SuperFW release
 
 on:
   push:
-    branches: ["master"]
+    branches:
+      - 'master'
+    tags:
+      - '*'
 
 jobs:
   build-firmware:
@@ -24,6 +27,7 @@ jobs:
           mv superfw.gba superfw.fw
           cp superfw.dldi.payload superfw.dldi
           cp res/patches.db patches.db
+          zip superfw.zip superfw.fw
       - name: Upload firmware build
         if: ${{ success() }}
         uses: actions/upload-artifact@v4
@@ -51,4 +55,25 @@ jobs:
             firmware.ewram.elf
             ingamemenu.elf
             superfw.dldi.elf
+      - name: Create release
+        id: create_release
+        if: startsWith(github.ref, 'refs/tags/')
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
+      - name: Upload Release Asset
+        uses: actions/upload-release-asset@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ./superfw.zip
+          asset_name: superfw.zip
+          asset_content_type: application/zip
 
