--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -21,6 +21,10 @@ jobs:
       - name: Get short SHA
         id: slug
         run: echo "sha8=$(echo ${GITHUB_SHA} | cut -c1-8)" >> $GITHUB_OUTPUT
+      - name: Get release version
+        id: tagversion
+        if: startsWith(github.ref, 'refs/tags/')
+        run: fullref="${{ github.ref }}"; tagversion=${fullref#"refs/tags/"}; echo "tagversion=${tagversion}" >> $GITHUB_OUTPUT
       - name: Build firmware image
         run: |
           make COMPRESSION_RATIO=9
@@ -74,6 +78,6 @@ jobs:
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
           asset_path: ./superfw.zip
-          asset_name: superfw.zip
+          asset_name: superfw-${{ steps.tagversion.outputs.tagversion }}.zip
           asset_content_type: application/zip
 
